# fledge

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  get_cpm.cmake
assets/: scene.xml  scene_basic.xml  scene_envmap.xml  scene_standard.xml  scene_transmission.xml  scene_vol_basic.xml  scene_vol_mesh.xml  scene_vol_shape.xml  sv_scene_basic.xml
scripts/: guard_checker.py
src/: CMakeLists.txt  aabb.hpp  accel.cpp  accel.hpp  camera.hpp  debug.hpp  distribution.hpp  film.cpp  film.hpp  fledge.cpp  fledge.h  fresnel.h  fresnel.hpp  fwd.hpp  integrator.cpp  integrator.hpp  interaction.cpp  interaction.hpp  light.cpp  light.hpp  material.cpp  material.hpp  plymesh.cpp  plymesh.hpp  primitive.cpp  primitive.hpp  ray.hpp  render.cpp  render.hpp  resource.hpp  rng.cpp  rng.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  smallvol.cpp  stats.cpp  stats.hpp  texture.cpp  (+6 more)
src/common/: aabb.h  camera.h  dispatcher.h  filter.h  fresnel.h  math_utils.h  ray.h  rng.h  sampler.h  switcher.h  transform.h  vector.h  vector.inc  vector_spec.inc
src/embree/: CMakeLists.txt  embree.hpp  eprimitive.cpp  eprimitive.hpp
src/experimental/: CMakeLists.txt  README.md  base_bvh.cpp  base_bvh.hpp  bvh.cpp  bvh.hpp  bvh_test.cpp  bvh_test.hpp  bvh_test_py.cpp  ch_test.cpp  convex_hull.hpp  convex_hull_test.cpp  experimental_utils.hpp  intersector.hpp  radix_bvh.cpp  radix_bvh.hpp
src/gpu/: CMakeLists.txt  gpu_memory.cpp  gpu_memory.hpp  gpu_rng.cpp  gpu_rng.cu  gpu_rng.cuh  gpu_rng.hpp  gpu_utils.cuh
src/ispc/: CMakeLists.txt  vector.ispc  vector_ispc.h
src/main/: fledge.cpp  fledge_tui.cpp
src/materials/: CMakeLists.txt  builtin_materials.cpp  builtin_materials.hpp  material.cpp  material.hpp  material_base.cpp  material_base.hpp
src/oidn/: CMakeLists.txt  oidn.cpp  oidn.hpp
src/optix/: CMakeLists.txt  FindOptiX.cmake  README.md  configure_optix.cmake  managed_memory.cpp  managed_memory.hpp  optix7.h  optix_interface.cpp  optix_interface.hpp  optix_kernel.cu  optix_render.cpp  optix_render.hpp
src/spec/embree/: CMakeLists.txt  embree.hpp  eprimitive.cpp  eprimitive.hpp
src/spec/ispc/: CMakeLists.txt
src/spec/oidn/: CMakeLists.txt  oidn.cpp  oidn.hpp
tests/: CMakeLists.txt  accel_tests.cpp  dispatcher_tests.cpp  distribution_tests.cpp  embree_tests.cpp  resource_tests.cpp  rng_tests.cu  sampler_tests.cpp  scene_tests.cpp  shape_tests.cpp  vector_tests.cpp
